--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <script defer src="./dist/bundle.js"></script>
+    <!-- <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self' http://127.0.0.1:8080; script-src 'self' 'unsafe-inline';"
+    />
+    <script nonce="random_nonce_here"></script> -->
     <title>Routes desafío</title>
   </head>
   <body>
